re PR tree-optimization/28162 (ICE in set_value_range, at tree-vrp.c:157)

2006-07-11  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/28162
	* fold-const.c (fold_binary): For (-A) * (-B) -> A * B
	make sure to convert the operands to the correct type.

	* gcc.dg/pr28162.c: New testcase.

From-SVN: r115333